# labelme-augmentor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TEST_INSTALLATION.sh  auglabelme.py  auglabelme_v2.py  augment.sh  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.arch/augment_code/: auglabelme.py  labelme_augmentation_config15white.yaml
.arch/config/: labelme_augmentation_config.yaml  labelme_augmentation_config15white.yaml  labelme_augmentation_config15white01_10.yaml  labelme_augmentation_config45black.yaml  labelme_augmentation_config45white.yaml  main_config.yaml  processing.yaml  segmentation_example.yaml  segmentation_scratch_config.yaml  simple_config.yaml  validation.yaml
.arch/config/config copy/: augmentation_config.yaml  augmentations.yaml  classes.yaml  labelme_augmentation_config15white01_15.yaml  labelme_augmentation_config45black.yaml  labelme_augmentation_config45black.yaml.backup  scratch_optimized_config.yaml
.github/workflows/: ci.yml  release.yml
configs/: labelme_augmentation_config45black.yaml  labelme_augmentation_config45black_test.yaml  labelme_augmentation_config45stripe.yaml  labelme_augmentation_config45white.yaml  labelme_augmentation_configINKblack.yaml  logging_quiet_console.yaml  minimal_example.yaml  test_config.yaml
configs/examples/: all_working_transforms.yaml  class_specific_validation.yaml  complete_example.yaml  conservative.yaml  logging_example.yaml  rare_class_boost.yaml
docs/: INSTALLATION.md  PROJECT_STATUS.md  QUICKSTART.md  architecture.md  index.md
docs/.docs/: BACKWARD_COMPATIBILITY.md  COMPLETE_PHASES_SUMMARY.md  FINAL_SUMMARY.txt  FIX_APPLIED.md  LOGGING_GUIDE.md  MIGRATION_GUIDE.md  REFACTORING_SUMMARY.md  SOLUTION_SUMMARY.md
docs/api/: index.md
examples/: basic_usage.py  custom_augmentation.py  programmatic_api.py
scripts/: verify_installation.py
src/labelme_augmentor/: __init__.py  __version__.py  cli.py
src/labelme_augmentor/config/: __init__.py  loader.py  schema.py  validator.py
src/labelme_augmentor/core/: __init__.py  augmentor.py  processor.py
src/labelme_augmentor/io/: __init__.py  image.py  labelme.py  mask.py
src/labelme_augmentor/transforms/: __init__.py  builder.py
src/labelme_augmentor/utils/: __init__.py  checkpoint.py  exceptions.py  logging_config.py
src/labelme_augmentor/validation/: __init__.py  validator.py
src/labelme_augmentor/visualization/: __init__.py  colors.py  debug.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_end_to_end.py
tests/unit/: test_albumentations_compatibility.py  test_checkpoint.py  test_config_validation.py  test_io.py  test_validation.py
